# sherion

./: ARCHITECTURE.md  Cargo.toml  FEATURES.md  LICENSE  README.md  SECURITY.md  deny.toml  sherion.toml
.cursor/rules/: terminal-pipeline.mdc
.github/workflows/: ci.yml  release-packages.yml  release.yml
flatpak/: cargo-sources.json  com.hocestnonsatis.Sherion.yml
packaging/: com.hocestnonsatis.Sherion.desktop  com.hocestnonsatis.Sherion.metainfo.xml
scripts/: generate-flatpak-cargo-sources.sh
src/: app.rs  clipboard.rs  config.rs  event.rs  input.rs  keybindings.rs  lib.rs  links.rs  main.rs  mouse.rs  osc.rs  platform.rs  profiler.rs  split.rs  tabs.rs  terminal_clone.rs  terminal_setup.rs  window_state.rs
src/pty/: busy.rs  mod.rs  output_tap.rs  tap.rs  windows.rs
src/render/: atlas.rs  background.rs  background_shader.rs  chrome.rs  frame.rs  glyph_cache.rs  layout.rs  menu.rs  mod.rs  perf.rs  renderer.rs  resize.rs  scene.rs  tab_bar.rs  tab_strip.rs  text.rs  theme.rs  title_bar.rs
src/security/: mod.rs  path.rs
wix/: main.wxs
