[package]
name = "sherion"
version = "0.1.3"
edition = "2021"
description = "A high-performance Rust terminal emulator"
authors = ["hocestnonsatis"]
license = "MIT"
repository = "https://github.com/hocestnonsatis/sherion"
homepage = "https://github.com/hocestnonsatis/sherion"
rust-version = "1.88"

[package.metadata.deb]
maintainer = "hocestnonsatis"
copyright = "2026, hocestnonsatis"
license-file = ["LICENSE", "4"]
section = "utils"
priority = "optional"
depends = "$auto, libfontconfig1, libxkbcommon0, libwayland-client0, libxcb1"
assets = [
    ["target/release/sherion", "usr/bin/", "755"],
    ["packaging/com.hocestnonsatis.Sherion.desktop", "usr/share/applications/", "644"],
    ["assets/icons/hicolor/16x16/apps/com.hocestnonsatis.Sherion.png", "usr/share/icons/hicolor/16x16/apps/", "644"],
    ["assets/icons/hicolor/32x32/apps/com.hocestnonsatis.Sherion.png", "usr/share/icons/hicolor/32x32/apps/", "644"],
    ["assets/icons/hicolor/48x48/apps/com.hocestnonsatis.Sherion.png", "usr/share/icons/hicolor/48x48/apps/", "644"],
    ["assets/icons/hicolor/64x64/apps/com.hocestnonsatis.Sherion.png", "usr/share/icons/hicolor/64x64/apps/", "644"],
    ["assets/icons/hicolor/128x128/apps/com.hocestnonsatis.Sherion.png", "usr/share/icons/hicolor/128x128/apps/", "644"],
    ["assets/icons/hicolor/256x256/apps/com.hocestnonsatis.Sherion.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
    ["assets/icons/hicolor/512x512/apps/com.hocestnonsatis.Sherion.png", "usr/share/icons/hicolor/512x512/apps/", "644"],
    ["packaging/com.hocestnonsatis.Sherion.metainfo.xml", "usr/share/metainfo/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/sherion", dest = "/usr/bin/sherion", mode = "755" },
    { source = "packaging/com.hocestnonsatis.Sherion.desktop", dest = "/usr/share/applications/com.hocestnonsatis.Sherion.desktop", mode = "644" },
    { source = "assets/icons/hicolor/256x256/apps/com.hocestnonsatis.Sherion.png", dest = "/usr/share/icons/hicolor/256x256/apps/com.hocestnonsatis.Sherion.png", mode = "644" },
    { source = "packaging/com.hocestnonsatis.Sherion.metainfo.xml", dest = "/usr/share/metainfo/com.hocestnonsatis.Sherion.metainfo.xml", mode = "644" },
]
requires = { "fontconfig" = "*", "libxkbcommon" = "*", "wayland-client" = "*" }

[package.metadata.wix]
upgrade-guid = "52179E66-3A8F-4DAC-BB89-FB7E7F0C0559"
path-guid = "9DE1A4D9-5050-4F69-8354-7869C5338986"
license = false
eula = false

[lib]
name = "sherion"
path = "src/lib.rs"

[[bin]]
name = "sherion"
path = "src/main.rs"

[dependencies]
alacritty_terminal = "0.26"
vte = "0.15"
swash = "0.2"
fontdb = "0.23"
arboard = "3"
anyhow = "1"
parking_lot = "0.12"
parley = "0.11"
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vello = "0.9"
wgpu = "29"
winit = "0.30"
regex = "1"
notify = "8"
polling = "3"
libc = "0.2.186"
image = "0.25"
simdutf8 = { version = "0.1", optional = true }

[features]
default = []
profiler = []
simd-utf8 = ["dep:simdutf8"]

[patch.crates-io]
alacritty_terminal = { path = "vendor/alacritty_terminal" }

# Config for 'dist'
[workspace.metadata.dist]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "hocestnonsatis/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# CI backends to support
ci = "github"
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
